--- a/src/components/common/Header.css
+++ b/src/components/common/Header.css
@@ -1,10 +1,11 @@
+/* src/components/common/Header.css */
 .header {
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   padding: 20px;
-  background-color: #009846; /* Color de fondo cuando se desplaza */
+  background-color: #009846;
   color: white;
   z-index: 1000;
   display: flex;
@@ -13,42 +14,60 @@
   box-sizing: border-box;
 }
 
-.header .logo-container {
+.header-logo {
   display: flex;
   align-items: center;
+  cursor: pointer;
 }
 
-.header .logo-container .circle {
+.header-logo .circle {
   width: 18px;
   height: 18px;
   background-color: white;
   border-radius: 50%;
-  margin-right: 4px;
+  margin-right: 8px;
 }
 
-.header .logo {
-  font-size: 24px;
+.logo-text {
+  font-size: 18px;
+  font-family: 'Poppins', sans-serif;
   font-weight: bold;
-}
-
-.header nav {
-  display: flex;
-  align-items: center;
-}
-
-.header nav ul {
-  list-style: none;
-  display: flex;
-  gap: 20px;
-  margin: 0;
-  padding: 0;
-}
-
-.header nav ul li {
-  margin: 0;
-}
-
-.header nav ul li a {
   color: white;
-  text-decoration: none;
+}
+
+.header-nav {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-grow: 1;
+  margin-left: -100px;
+}
+
+.header-nav button {
+  background: none;
+  border: none;
+  color: white;
+  cursor: pointer;
+  font-size: 18px;
+  font-family: 'Poppins', sans-serif;
+  font-weight: bold;
+  margin-left: 20px;
+}
+
+.header-nav button:hover {
+  text-decoration: underline;
+}
+
+.header-icons {
+  display: flex;
+  gap: 35px;
+  margin-right: 40px;
+}
+
+.header-icons button {
+  background: none;
+  border: none;
+  color: white;
+  cursor: pointer;
+  font-size: 18px;
 }
