--- a/src/components/common/MainHeader.css
+++ b/src/components/common/MainHeader.css
@@ -1,43 +1,71 @@
 .main-header {
-    position: absolute;
-    top: 20px;
-    left: 20px;
-    width: calc(100% - 40px);
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
     padding: 20px;
     background-color: transparent;
     color: white;
-}
-
-.main-header nav ul {
-    list-style: none;
+    justify-content: space-between;
+    align-items: center;
+    box-sizing: border-box;
     display: flex;
-    align-items: center; /* Alinear verticalmente dentro del contenedor */
 }
 
-.main-header nav ul li {
-    margin-right: 20px; /* Espacio entre elementos */
-}
-
-.main-header nav ul li.logo {
-    margin-right: auto; /* Mueve el logo al extremo izquierdo */
-}
-
-.main-header nav ul li.logo a {
+.header-logo {
     display: flex;
     align-items: center;
-    text-decoration: none;
-    color: white;
+    cursor: pointer;
 }
 
-.main-header .circle {
-    width: 12px;
-    height: 12px;
+.header-logo .circle {
+    width: 18px;
+    height: 18px;
     background-color: white;
     border-radius: 50%;
-    margin-right: 8px; /* Espacio entre el círculo y el texto */
-}
+    margin-right: 8px;
+  }
 
-.main-header nav ul li a {
+  .logo-text {
+    font-size: 18px;
+    font-family: 'Poppins', sans-serif;
+    font-weight: bold;
     color: white;
-    text-decoration: none;
-}
+  }
+
+  .header-nav {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-grow: 1;
+    margin-left: -100px;
+  }
+  
+  .header-nav button {
+    background: none;
+    border: none;
+    color: white;
+    cursor: pointer;
+    font-size: 18px;
+    font-family: 'Poppins', sans-serif;
+    font-weight: bold;
+    margin-left: 20px;
+  }
+  
+  .header-nav button:hover {
+    text-decoration: underline;
+  }
+  
+  .header-icons {
+    display: flex;
+    gap: 35px;
+    margin-right: 40px;
+  }
+  
+  .header-icons button {
+    background: none;
+    border: none;
+    color: white;
+    cursor: pointer;
+    font-size: 18px;
+  }
